--- a/crawling.ipynb
+++ b/crawling.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOG77NPouGoS50OvPSRwoJv",
+      "authorship_tag": "ABX9TyO9CuQzae2wKxCKpo1lVlHs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "QmXxXZdEYvoW",
-        "outputId": "dacdc9ca-9dc9-42e5-c954-d4bf68d22642"
+        "outputId": "a3fed8fc-6479-41c2-cd6c-f2dd199a1e94"
       },
       "outputs": [
         {
@@ -44,25 +44,25 @@
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting selenium\n",
             "  Downloading selenium-4.7.2-py3-none-any.whl (6.3 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.3/6.3 MB\u001b[0m \u001b[31m38.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: certifi>=2021.10.8 in /usr/local/lib/python3.8/dist-packages (from selenium) (2022.12.7)\n",
-            "Collecting urllib3[socks]~=1.26\n",
-            "  Downloading urllib3-1.26.13-py2.py3-none-any.whl (140 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m140.6/140.6 KB\u001b[0m \u001b[31m14.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.3/6.3 MB\u001b[0m \u001b[31m39.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hCollecting urllib3[socks]~=1.26\n",
+            "  Downloading urllib3-1.26.14-py2.py3-none-any.whl (140 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m140.6/140.6 KB\u001b[0m \u001b[31m15.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hCollecting trio~=0.17\n",
             "  Downloading trio-0.22.0-py3-none-any.whl (384 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m384.9/384.9 KB\u001b[0m \u001b[31m23.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m384.9/384.9 KB\u001b[0m \u001b[31m31.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hCollecting trio-websocket~=0.9\n",
             "  Downloading trio_websocket-0.9.2-py3-none-any.whl (16 kB)\n",
-            "Requirement already satisfied: attrs>=19.2.0 in /usr/local/lib/python3.8/dist-packages (from trio~=0.17->selenium) (22.2.0)\n",
+            "Requirement already satisfied: certifi>=2021.10.8 in /usr/local/lib/python3.8/dist-packages (from selenium) (2022.12.7)\n",
+            "Requirement already satisfied: idna in /usr/local/lib/python3.8/dist-packages (from trio~=0.17->selenium) (2.10)\n",
             "Collecting sniffio\n",
             "  Downloading sniffio-1.3.0-py3-none-any.whl (10 kB)\n",
-            "Collecting async-generator>=1.9\n",
-            "  Downloading async_generator-1.10-py3-none-any.whl (18 kB)\n",
-            "Requirement already satisfied: idna in /usr/local/lib/python3.8/dist-packages (from trio~=0.17->selenium) (2.10)\n",
             "Collecting exceptiongroup>=1.0.0rc9\n",
             "  Downloading exceptiongroup-1.1.0-py3-none-any.whl (14 kB)\n",
             "Requirement already satisfied: sortedcontainers in /usr/local/lib/python3.8/dist-packages (from trio~=0.17->selenium) (2.4.0)\n",
+            "Collecting async-generator>=1.9\n",
+            "  Downloading async_generator-1.10-py3-none-any.whl (18 kB)\n",
+            "Requirement already satisfied: attrs>=19.2.0 in /usr/local/lib/python3.8/dist-packages (from trio~=0.17->selenium) (22.2.0)\n",
             "Collecting outcome\n",
             "  Downloading outcome-1.2.0-py2.py3-none-any.whl (9.7 kB)\n",
             "Collecting wsproto>=0.14\n",
@@ -70,36 +70,28 @@
             "Requirement already satisfied: PySocks!=1.5.7,<2.0,>=1.5.6 in /usr/local/lib/python3.8/dist-packages (from urllib3[socks]~=1.26->selenium) (1.7.1)\n",
             "Collecting h11<1,>=0.9.0\n",
             "  Downloading h11-0.14.0-py3-none-any.whl (58 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.3/58.3 KB\u001b[0m \u001b[31m6.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.3/58.3 KB\u001b[0m \u001b[31m6.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: urllib3, sniffio, outcome, h11, exceptiongroup, async-generator, wsproto, trio, trio-websocket, selenium\n",
             "  Attempting uninstall: urllib3\n",
             "    Found existing installation: urllib3 1.24.3\n",
             "    Uninstalling urllib3-1.24.3:\n",
             "      Successfully uninstalled urllib3-1.24.3\n",
-            "Successfully installed async-generator-1.10 exceptiongroup-1.1.0 h11-0.14.0 outcome-1.2.0 selenium-4.7.2 sniffio-1.3.0 trio-0.22.0 trio-websocket-0.9.2 urllib3-1.26.13 wsproto-1.2.0\n",
+            "Successfully installed async-generator-1.10 exceptiongroup-1.1.0 h11-0.14.0 outcome-1.2.0 selenium-4.7.2 sniffio-1.3.0 trio-0.22.0 trio-websocket-0.9.2 urllib3-1.26.14 wsproto-1.2.0\n",
             "Get:1 https://cloud.r-project.org/bin/linux/ubuntu bionic-cran40/ InRelease [3,626 B]\n",
             "Ign:2 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  InRelease\n",
             "Hit:3 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  InRelease\n",
-            "Get:4 http://security.ubuntu.com/ubuntu bionic-security InRelease [88.7 kB]\n",
-            "Hit:5 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  Release\n",
-            "Hit:6 http://archive.ubuntu.com/ubuntu bionic InRelease\n",
-            "Get:7 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic InRelease [15.9 kB]\n",
+            "Hit:4 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  Release\n",
+            "Get:5 http://security.ubuntu.com/ubuntu bionic-security InRelease [88.7 kB]\n",
+            "Hit:6 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic InRelease\n",
+            "Hit:7 http://archive.ubuntu.com/ubuntu bionic InRelease\n",
             "Get:8 http://archive.ubuntu.com/ubuntu bionic-updates InRelease [88.7 kB]\n",
             "Hit:9 http://ppa.launchpad.net/cran/libgit2/ubuntu bionic InRelease\n",
-            "Get:10 http://archive.ubuntu.com/ubuntu bionic-backports InRelease [83.3 kB]\n",
             "Hit:11 http://ppa.launchpad.net/deadsnakes/ppa/ubuntu bionic InRelease\n",
-            "Get:12 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu bionic InRelease [21.3 kB]\n",
-            "Get:14 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic/main Sources [2,240 kB]\n",
-            "Get:15 http://security.ubuntu.com/ubuntu bionic-security/main amd64 Packages [3,127 kB]\n",
-            "Get:16 http://security.ubuntu.com/ubuntu bionic-security/universe amd64 Packages [1,573 kB]\n",
-            "Get:17 http://archive.ubuntu.com/ubuntu bionic-updates/main amd64 Packages [3,549 kB]\n",
-            "Get:18 http://security.ubuntu.com/ubuntu bionic-security/restricted amd64 Packages [1,349 kB]\n",
-            "Get:19 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic/main amd64 Packages [1,145 kB]\n",
-            "Get:20 http://archive.ubuntu.com/ubuntu bionic-updates/restricted amd64 Packages [1,389 kB]\n",
-            "Get:21 http://archive.ubuntu.com/ubuntu bionic-updates/multiverse amd64 Packages [30.8 kB]\n",
-            "Get:22 http://archive.ubuntu.com/ubuntu bionic-updates/universe amd64 Packages [2,348 kB]\n",
-            "Get:23 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu bionic/main amd64 Packages [43.2 kB]\n",
-            "Fetched 17.1 MB in 4s (3,991 kB/s)\n",
+            "Get:12 http://archive.ubuntu.com/ubuntu bionic-backports InRelease [83.3 kB]\n",
+            "Hit:13 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu bionic InRelease\n",
+            "Get:14 http://archive.ubuntu.com/ubuntu bionic-updates/universe amd64 Packages [2,348 kB]\n",
+            "Get:15 http://archive.ubuntu.com/ubuntu bionic-updates/main amd64 Packages [3,552 kB]\n",
+            "Fetched 6,165 kB in 3s (1,815 kB/s)\n",
             "Reading package lists... Done\n",
             "Reading package lists... Done\n",
             "Building dependency tree       \n",
@@ -114,14 +106,14 @@
             "The following NEW packages will be installed:\n",
             "  chromium-browser chromium-browser-l10n chromium-chromedriver\n",
             "  chromium-codecs-ffmpeg-extra\n",
-            "0 upgraded, 4 newly installed, 0 to remove and 26 not upgraded.\n",
+            "0 upgraded, 4 newly installed, 0 to remove and 25 not upgraded.\n",
             "Need to get 95.6 MB of archives.\n",
             "After this operation, 321 MB of additional disk space will be used.\n",
             "Get:1 http://archive.ubuntu.com/ubuntu bionic-updates/universe amd64 chromium-codecs-ffmpeg-extra amd64 108.0.5359.71-0ubuntu0.18.04.5 [1,159 kB]\n",
             "Get:2 http://archive.ubuntu.com/ubuntu bionic-updates/universe amd64 chromium-browser amd64 108.0.5359.71-0ubuntu0.18.04.5 [83.6 MB]\n",
             "Get:3 http://archive.ubuntu.com/ubuntu bionic-updates/universe amd64 chromium-browser-l10n all 108.0.5359.71-0ubuntu0.18.04.5 [5,230 kB]\n",
             "Get:4 http://archive.ubuntu.com/ubuntu bionic-updates/universe amd64 chromium-chromedriver amd64 108.0.5359.71-0ubuntu0.18.04.5 [5,594 kB]\n",
-            "Fetched 95.6 MB in 4s (24.2 MB/s)\n",
+            "Fetched 95.6 MB in 6s (14.8 MB/s)\n",
             "Selecting previously unselected package chromium-codecs-ffmpeg-extra.\n",
             "(Reading database ... 124016 files and directories currently installed.)\n",
             "Preparing to unpack .../chromium-codecs-ffmpeg-extra_108.0.5359.71-0ubuntu0.18.04.5_amd64.deb ...\n",
@@ -150,7 +142,7 @@
         }
       ],
       "source": [
-        "#이 부분은 처음 한번만 실행 크롤링을 위해 필요한 함수 설치\n",
+        "#크롤링을 위해 필요한 함수 설치\n",
         "!pip install selenium\n",
         "!apt-get update\n",
         "!apt install chromium-chromedriver\n",
@@ -171,7 +163,7 @@
       "metadata": {
         "id": "sGcW0R7pYwPH"
       },
-      "execution_count": 90,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -187,7 +179,7 @@
       "metadata": {
         "id": "T7R5w6XuY9yi"
       },
-      "execution_count": 95,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -258,15 +250,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xf6qtoeoY--D",
-        "outputId": "aba03e50-d441-4981-f837-9e2eee860f43"
+        "outputId": "3fe66078-8bce-4f81-cd9c-ad20a664154e"
       },
-      "execution_count": 92,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-92-a99a1c491a25>:29: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+            "<ipython-input-4-b450fb753c7c>:29: FutureWarning: The default value of regex will change from True to False in a future version.\n",
             "  temp[0] = temp[0].str.replace(\"^\\d+\", '')\n"
           ]
         },
@@ -575,9 +567,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jBAirFI7Y_Av",
-        "outputId": "45a92829-d85f-4d37-fd17-26dd31064e93"
+        "outputId": "1af780bd-5001-45db-c0dd-4274953e1d4c"
       },
-      "execution_count": 93,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -587,7 +579,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 93
+          "execution_count": 5
         }
       ]
     },
@@ -600,7 +592,7 @@
       "metadata": {
         "id": "VUFSlF3WY_GQ"
       },
-      "execution_count": 94,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -671,15 +663,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "21afb0db-86fe-49ee-8507-c0ad0a1adb57"
+        "outputId": "25b3698e-cd4f-49ca-8765-2b6d0db7ac7e"
       },
-      "execution_count": 96,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-96-f732466604f6>:29: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+            "<ipython-input-8-10519d6281d8>:29: FutureWarning: The default value of regex will change from True to False in a future version.\n",
             "  temp[0] = temp[0].str.replace(\"^\\d+\", '')\n"
           ]
         },
@@ -752,9 +744,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9Kz8JyfTw5vm",
-        "outputId": "1b2023a2-004c-463d-8ce1-31a5deab877a"
+        "outputId": "18b7d7bc-eb4e-4633-aaf1-ef73b46ea63b"
       },
-      "execution_count": 97,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -764,7 +756,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 97
+          "execution_count": 9
         }
       ]
     },
@@ -776,7 +768,7 @@
       "metadata": {
         "id": "X2mwgJfoxeTe"
       },
-      "execution_count": 99,
+      "execution_count": 10,
       "outputs": []
     }
   ]
